# ideogram-builder

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  client.py  config.example.json  example_prompt.json  ideogramV4Workflow_v20.json  index.html  package-lock.json  package.json  server.py  start.sh
docs/: lora-plan.md
img-to-json/: .gitignore  main.py  pipeline.py  pipeline_split.py  pyproject.toml  requirements.txt
img-to-json/models/: local_vlm_loader.py  sam_loader.py
img-to-json/prompts/: bbox_fallback.txt  element_recaption.txt  global_analysis.txt  object_listing.txt  scene_analysis.txt  scene_analysis_no_style.txt  vision_analysis.txt
img-to-json/steps/: json_builder.py  local_vlm_analysis.py  preprocess.py  sam_detection.py
img-to-json/tests/: test_bbox.py  test_caption_verifier.py  test_json_builder.py  test_pipeline_split.py
img-to-json/utils/: bbox.py  bbox_highlight.py  caption_verifier.py  debug_logger.py  palette.py
runpod/: .dockerignore  Dockerfile  README.md  example_prompt.json  handler.py  modal_app.py  workflow_template.json  workflow_template_lora.json  workflow_template_lora_turbo.json
src/: ai-enhancer.js  app.js  backend.js  canvas-core.js  canvas.js  collections-data.js  collections-preview.js  collections-ui.js  collections.js  comfyui-template.js  comfyui.js  escape-html.js  events.js  gallery.js  handler.py  json-builder.js  layers.js  lora.js  modal.js  palette.js  png-import.js  queue.js  runpod.js  session.js  settings-recaption.js  settings.js  state.js  style-presets.js  toast.js  (+3 more)
(+60 files in other folders)
